bootstrap/addons/kyverno-policies/templates/restrict-privileged-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-privileged-containers
  annotations:
    policies.kyverno.io/title: Restrict Privileged Containers
    policies.kyverno.io/category: CIS Benchmark 5.2.1
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Privileged containers can easily escalate to host access and should
      not be allowed.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: privileged
      match:
        any:
        - resources:
            kinds:
              - Pod
      exclude:
        any:
        - resources:
            namespaces:
              - kube-system
              - gatekeeper-system
              - kyverno
      validate:
        message: Privileged containers are not allowed.
        pattern:
          spec:
            containers:
              - name: "*"
                =(securityContext):
                  =(privileged): "false"
